# 2026-capstone-59

./: .gitignore
backend/: .env.example  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4958469f0622_step_content_drop_guide_rename_template_.py  a2aef58231c7_initial_schema.py
backend/app/ai/: main.py
backend/app/ai/routers/: ai.py
backend/app/ai/services/: orchestrator.py  rag.py
backend/app/business/: main.py
backend/app/business/routers/: projects.py  stages.py  steps.py
backend/app/core/: config.py  database.py
backend/app/core/aws/: bedrock.py
backend/app/core/models/: __init__.py  project.py  stage.py  step.py
frontend/: README.md  index.html  package-lock.json
