[project]
name = "poco"
version = "0.1.0"
description = ""
authors = [
    {name = "Hanrim Kim",email = "khrim123@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "requests (>=2.33.1,<3.0.0)",
    "mangum (>=0.21.0,<0.22.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg[binary] (>=3.2.0,<4.0.0)",
    "boto3 (>=1.35.0,<2.0.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "boto (>=2.49.0,<3.0.0)",
    "pydantic-settings (>=2.5.0,<3.0.0)",
    "alembic (>=1.13,<2.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
